# BibleLog

./: .gitignore  AGENTS.md  README.md  architecture.md  project_definition.md  settings.gradle.kts
backend/: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/ai_service/: Dockerfile  container.py  deps.py  main.py  providers.py  router.py  settings.py
backend/ai_service/repositories/: ai.py  ai_memory.py  ai_postgres.py
backend/app/: __init__.py  auth_utils.py  config.py  deps.py  main.py  models.py  store.py
backend/app/ai/: providers.py
backend/app/routers/: ai.py  auth.py  feed.py  journal.py  reading.py  users.py
backend/common/: app_factory.py  bible_catalog.py  config.py  deps.py  domain.py  exceptions.py  internal.py  models.py  reading_progress.py  telemetry.py
backend/common/auth/: jwt.py
backend/data/: bible_verse_counts.json
backend/feed_service/: Dockerfile  cache.py  container.py  cursor.py  deps.py  internal_router.py  main.py  router.py  service.py  settings.py
backend/note_service/: Dockerfile  container.py  deps.py  internal_router.py  main.py  router.py  service.py  settings.py
backend/notification_service/: Dockerfile  container.py  deps.py  main.py  router.py  service.py  settings.py  websocket_hub.py
backend/reading_service/: Dockerfile  container.py  deps.py  main.py  router.py  service.py  settings.py
backend/schema/: postgres.sql  scylla.cql
backend/seed/: Dockerfile  seed-dev-data.sh
backend/shared/: config.py  deps.py  domain.py  internal.py
backend/social_service/: Dockerfile  container.py  deps.py  internal_router.py  main.py  router.py  service.py  settings.py
backend/tests/: test_reading_progress.py
backend/user_service/: Dockerfile  auth_tokens.py  container.py  deps.py  internal_router.py  main.py  organization_service.py  relation_service.py  settings.py
(+170 files in other folders)
