[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biblelog-backend"
version = "0.4.0"
description = "BibleLog FastAPI backend (microservices monorepo)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "authlib>=1.4.0",
    "python-multipart>=0.0.17",
    "itsdangerous>=2.2.0",
    "cassandra-driver>=3.29.0",
    "redis>=5.2.0",
    "aiokafka>=0.12.0",
    "psycopg[binary]>=3.2.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-psycopg>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "*_service*"]
